--- a/app/assets/stylesheets/base/glyphicons.scss
+++ b/app/assets/stylesheets/base/glyphicons.scss
@@ -7,6 +7,7 @@
 // <a href="#"><span class="glyphicon glyphicon-star"></span> Star</a>
 
 // Import the fonts
+@import 'variables';
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url('fonts/glyphicons-halflings-regular.eot');
