--- a/app/assets/stylesheets/base/landing.scss
+++ b/app/assets/stylesheets/base/landing.scss
@@ -1,5 +1,6 @@
 /* PACE PLUGIN
 -------------------------------------------------- */
+@import 'variables';
 .landing-page.pace .pace-progress {
   background: #fff;
   position: fixed;
