--- a/app/assets/stylesheets/base/metismenu.scss
+++ b/app/assets/stylesheets/base/metismenu.scss
@@ -6,7 +6,7 @@
  * Made by Osman Nuri Okumus
  * Under MIT License
  */
-
+ @import 'variables';
 .metismenu .plus-minus, .metismenu .plus-times {
   float: right
 }
