--- a/app/assets/stylesheets/base/spinners.scss
+++ b/app/assets/stylesheets/base/spinners.scss
@@ -4,7 +4,7 @@
  *    <div class="sk-spinner sk-spinner-rotating-plane"></div>
  *
  */
-
+ @import 'variables';
 .sk-spinner-rotating-plane.sk-spinner {
   width: 30px;
   height: 30px;
