--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,9 +18,9 @@
 <%= form_tag users_path, :method => 'get' do %>
 <div class="ibox-content m-b-sm border-bottom">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm-2">
             <div class="form-group">
-                <label class="col-form-label" for="product_name">Nombre</label>
+                <label class="col-form-label" for="nombre">Nombre</label>
                 <%= text_field_tag :nombre, params[:nombre], {
                     :class => "form-control",
                     :placeholder => "Nombre"
@@ -29,7 +29,7 @@
         </div>
         <div class="col-sm-2">
             <div class="form-group">
-                <label class="col-form-label" for="price">Rut</label>
+                <label class="col-form-label" for="rut">Rut</label>
                 <%= text_field_tag :rut, params[:rut], {
                     :class => "form-control",
                     :placeholder => "Rut"
@@ -38,10 +38,19 @@
         </div>
         <div class="col-sm-2">
             <div class="form-group">
-                <label class="col-form-label" for="quantity">Correo Electrónico</label>
+                <label class="col-form-label" for="email">Correo Electrónico</label>
                 <%= text_field_tag :email, params[:email], {
                     :class => "form-control",
                     :placeholder => "Correo Electrónico"
+                } %>
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <div class="form-group">
+                <label class="col-form-label" for="perfil">Perfil</label>
+                <%= text_field_tag :perfil, params[:perfil], {
+                    :class => "form-control",
+                    :placeholder => "Perfil"
                 } %>
             </div>
         </div>
@@ -73,6 +82,7 @@
                         <th data-toggle="true">Nombre</th>
                         <th data-hide="phone">Rut</th>
                         <th data-hide="phone,tablet" >Correo Electrónico</th>
+                        <th data-hide="phone,tablet" >Perfil</th>
                         <th data-hide="phone">Estado</th>
                         <th class="text-right" data-sort-ignore="true">Acciones</th>
 
@@ -88,6 +98,9 @@
                         </td>
                         <td>
                             juanitoperez@contac.cl
+                        </td>
+                        <td>
+                            Ingeniero Informático
                         </td>
                         <td>
                             <span class="label <%= state_class("activo") %>">Activo</span>
