Added abilities, profile create page

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,12 +1,9 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Usuarios</h2>
+        <h2>Colaboradores</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="<%= url_for :controller => 'dashboard', :action => 'index' %>">Dashboard</a>
-            </li>
-            <li class="breadcrumb-item">
-                <strong>Colaboradores</strong>
+                <a href="<%= url_for :controller => 'collaborators', :action => 'index' %>">Colaboradores</a>
             </li>
         </ol>
     </div>
@@ -15,7 +12,7 @@
 <div class="wrapper wrapper-content animated fadeInRight">
 
 
-<%= form_tag colaboradores_path, :method => 'get' do %>
+<%= form_tag collaborators_path, :method => 'get' do %>
 <div class="ibox-content m-b-sm border-bottom">
     <div class="row">
         <div class="col-sm-2">
@@ -107,7 +104,7 @@
                         </td>
                         <td class="text-right">
                             <div class="btn-group">
-                                <button class="btn-white btn btn-xs"><%= link_to "Ver", colaboradores_path({id: '1'}) %></button>
+                                <button class="btn-white btn btn-xs"><%= link_to "Ver", collaborators_path({id: '1'}) %></button>
                                 <button class="btn-warning btn btn-xs">Editar</button>
                                 <button class="btn-danger btn btn-xs">Borrar</button>
                             </div>
