--- a/app/views/abilities_tecnicas/index.html.erb
+++ b/app/views/abilities_tecnicas/index.html.erb
@@ -1,9 +1,12 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Habilidades</h2>
+        <h2>Competencias</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="<%= url_for :controller => 'abilities', :action => 'index' %>">Habilidades</a>
+                Competencias
+            </li>
+            <li class="breadcrumb-item">
+                <a href="<%= url_for :controller => 'abilities_tecnicas', :action => 'index' %>">Técnicas</a>
             </li>
         </ol>
     </div>
@@ -12,10 +15,10 @@
 <div class="wrapper wrapper-content animated fadeInRight">
 
 
-<%= form_tag abilities_path, :method => 'get' do %>
+<%= form_tag "/abilities/tecnicas", :method => 'get' do %>
 <div class="ibox-content m-b-sm border-bottom">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col">
             <div class="form-group">
                 <label class="col-form-label" for="habilidad">Habilidad</label>
                 <%= text_field_tag :ability, params[:ability], {
@@ -24,17 +27,17 @@
                 } %>
             </div>
         </div>
-        <div class="col-sm">
-            <div class="form-group">
-                <label class="col-form-label" for="categoria">Categoria</label>
-                <%= select_tag :category, options_for_select(
+        <%# <div class="col-sm"> %>
+            <%# <div class="form-group"> %>
+                <%# <label class="col-form-label" for="categoria">Categoria</label> %>
+                <%# <%= select_tag :category, options_for_select(
                     @categories.map {|category| [category.category, category.id]}
                 ), {
                     :class => "form-control",
                     :include_blank => "Todo"
                 } %>
-            </div>
-        </div>
+            <%# </div> %>
+        <%# </div> %>
     </div>
     <div class="row">
         <div class="col-lg-1 offset-lg-11">
@@ -55,7 +58,6 @@
                     <tr>
 
                         <th data-toggle="true">Habilidad</th>
-                        <th data-hide="phone">Categoria</th>
                         <th class="text-right" data-sort-ignore="true">Acciones</th>
 
                     </tr>
@@ -66,13 +68,10 @@
                             <td id="ability-<%= index %>">
                                 <%= ability.ability %>
                             </td>
-                            <td id="category-<%= index %>">
-                               <%= ability.abilities_type.type_name %>
-                            </td>
                             <td class="text-right">
                                 <div class="btn-group">
                                     <button data-toggle="modal" href="#modificar-habilidad-form" id="edit-button-<%= index %>" class="btn-warning btn btn-xs" style="border-radius: 0px;">Editar</button>
-                                    <%= link_to "/abilities/#{ability.id}", :controller => "abilities", :action => "destroy_index", :method => "delete" do %>
+                                    <%= link_to "/abilities/#{ability.id}", :controller => "abilities", :action => "destroy", :method => "delete" do %>
                                         <button class="btn-danger btn btn-xs" style="border-radius: 0px;">Borrar</button>
                                     <% end %>
                                 </div>
@@ -103,7 +102,7 @@
             <div class="modal-body">
                 <div class="row">
                     <div class="col-sm"><h3 class="m-t-none m-b">Modificar Habilidad</h3>
-                        <form id="modificar-form" action="/abilities/1" accept-charset="UTF-8" method="put">
+                        <%= form_tag "/abilities/1", :method => 'put', :id => 'modificar-form' do %>
                             <div class="form-group">
                                 <label>Habilidad</label>
                                 <%= text_field_tag :updated_ability, params[:updated_ability], {
@@ -112,17 +111,10 @@
                                     :placeholder => "Habilidad"
                                 }%>
                             </div>
-                            <div class="form-group">
-                                <label>Categoria</label>
-                                <%= select_tag :updated_category, options_for_select([["Habilidad Técnica", 1], ["Habilidad Blanda", 2]]), {
-                                    :class => "form-control",
-                                    :id => "updated_ability_category"
-                                }%>
-                            </div>
                             <div>
                                 <button class="btn btn-primary float-right" type="submit"><strong>Guardar Cambios</strong></button>
                             </div>
-                        </form>
+                        <% end %>
                     </div>
                 </div>
             </div>
@@ -133,6 +125,8 @@
 <% content_for :javascript do %>
 
 <script type="text/javascript">
+
+var abilities
 
 $(function() {
     $('.footable').footable();
