--- a/app/views/areas/index.html.erb
+++ b/app/views/areas/index.html.erb
@@ -1,9 +1,15 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Habilidades</h2>
+        <h2>Competencias</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="<%= url_for :controller => 'abilities', :action => 'index' %>">Habilidades</a>
+                Competencias
+            </li>
+            <li class="breadcrumb-item">
+                Blandas
+            </li>
+            <li class="breadcrumb-item">
+                <a href="<%= url_for :controller => 'areas', :action => 'index' %>">Áreas</a>
             </li>
         </ol>
     </div>
@@ -12,15 +18,15 @@
 <div class="wrapper wrapper-content animated fadeInRight">
 
 
-<%= form_tag abilities_path, :method => 'get' do %>
+<%= form_tag "/abilities/blandas/areas", :method => 'get' do %>
 <div class="ibox-content m-b-sm border-bottom">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col-sm">
             <div class="form-group">
-                <label class="col-form-label" for="habilidad">Habilidad</label>
-                <%= text_field_tag :ability, params[:ability], {
+                <label class="col-form-label" for="habilidad">Área</label>
+                <%= text_field_tag :area, params[:area], {
                     :class => "form-control",
-                    :placeholder => "Habilidad"
+                    :placeholder => "Área"
                 } %>
             </div>
         </div>
@@ -31,7 +37,8 @@
                     @categories.map {|category| [category.category, category.id]}
                 ), {
                     :class => "form-control",
-                    :include_blank => "Todo"
+                    :include_blank => "Todo",
+                    :id => "category_search"
                 } %>
             </div>
         </div>
@@ -54,25 +61,25 @@
                     <thead>
                     <tr>
 
-                        <th data-toggle="true">Habilidad</th>
-                        <th data-hide="phone">Categoria</th>
+                        <th data-toggle="true">Áreas</th>
+                        <th data-toggle="true">Categoria</th>
                         <th class="text-right" data-sort-ignore="true">Acciones</th>
 
                     </tr>
                     </thead>
                     <tbody>
-                    <% @abilities.each_with_index do |ability, index| %>
+                    <% @areas.each_with_index do |area, index| %>
                         <tr>
-                            <td id="ability-<%= index %>">
-                                <%= ability.ability %>
+                            <td id="area-<%= index %>">
+                                <%= area.area %>
                             </td>
                             <td id="category-<%= index %>">
-                               <%= ability.abilities_type.type_name %>
+                                <%= area.category.category %>
                             </td>
                             <td class="text-right">
                                 <div class="btn-group">
                                     <button data-toggle="modal" href="#modificar-habilidad-form" id="edit-button-<%= index %>" class="btn-warning btn btn-xs" style="border-radius: 0px;">Editar</button>
-                                    <%= link_to "/abilities/#{ability.id}", :controller => "abilities", :action => "destroy_index", :method => "delete" do %>
+                                    <%= link_to "/abilities/blandas/areas/#{area.id}", :controller => "abilities", :action => "areas_destroy", :method => "delete" do %>
                                         <button class="btn-danger btn btn-xs" style="border-radius: 0px;">Borrar</button>
                                     <% end %>
                                 </div>
@@ -102,27 +109,27 @@
         <div class="modal-content">
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-sm"><h3 class="m-t-none m-b">Modificar Habilidad</h3>
-                        <form id="modificar-form" action="/abilities/1" accept-charset="UTF-8" method="put">
+                    <div class="col-sm"><h3 class="m-t-none m-b">Modificar Área</h3>
+                        <%= form_tag "/abilities/blandas/areas/1", :method => 'put', :id => 'modificar-form' do %>
                             <div class="form-group">
-                                <label>Habilidad</label>
-                                <%= text_field_tag :updated_ability, params[:updated_ability], {
+                                <label>Área</label>
+                                <%= text_field_tag :updated_area, params[:updated_area], {
                                     :class => "form-control",
-                                    :id => "updated_ability_ability",
+                                    :id => "updated_area",
                                     :placeholder => "Habilidad"
                                 }%>
                             </div>
                             <div class="form-group">
                                 <label>Categoria</label>
-                                <%= select_tag :updated_category, options_for_select([["Habilidad Técnica", 1], ["Habilidad Blanda", 2]]), {
+                                <%= select_tag :updated_category, options_for_select(@categories.map {|category| [category.category, category.id]}), {
                                     :class => "form-control",
-                                    :id => "updated_ability_category"
+                                    :id => "updated_category"
                                 }%>
                             </div>
                             <div>
                                 <button class="btn btn-primary float-right" type="submit"><strong>Guardar Cambios</strong></button>
                             </div>
-                        </form>
+                        <% end %>
                     </div>
                 </div>
             </div>
@@ -134,14 +141,17 @@
 
 <script type="text/javascript">
 
+var abilities
+
 $(function() {
+
     $('.footable').footable();
 
     $('[id^="edit-button-"]').on('click', (e) => {
         const index = e.target.id.substring(12, e.target.id.length)
-        $("#updated_ability_ability").val(gon.abilities[index].ability)
-        $("#updated_ability_category").val(gon.abilities[index].category)
-        $("#modificar-form").attr("action", `/abilities/${gon.abilities[index].id}`)
+        $("#updated_area").val(gon.areas[index].area)
+        $("#updated_category").val(gon.areas[index].category_id)
+        $("#modificar-form").attr("action", `/abilities/blandas/areas/${gon.areas[index].id}`)
     })
 
 
