--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,15 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Habilidades</h2>
+        <h2>Competencias</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="<%= url_for :controller => 'abilities', :action => 'index' %>">Habilidades</a>
+                Competencias
+            </li>
+            <li class="breadcrumb-item">
+                Blandas
+            </li>
+            <li class="breadcrumb-item">
+                <a href="<%= url_for :controller => 'categories', :action => 'index' %>">Categorias</a>
             </li>
         </ol>
     </div>
@@ -12,29 +18,29 @@
 <div class="wrapper wrapper-content animated fadeInRight">
 
 
-<%= form_tag abilities_path, :method => 'get' do %>
+<%= form_tag "/abilities/blandas/categories", :method => 'get' do %>
 <div class="ibox-content m-b-sm border-bottom">
     <div class="row">
-        <div class="col-sm-4">
+        <div class="col">
             <div class="form-group">
-                <label class="col-form-label" for="habilidad">Habilidad</label>
-                <%= text_field_tag :ability, params[:ability], {
+                <label class="col-form-label" for="category">Categoria</label>
+                <%= text_field_tag :category, params[:category], {
                     :class => "form-control",
-                    :placeholder => "Habilidad"
+                    :placeholder => "Categoria"
                 } %>
             </div>
         </div>
-        <div class="col-sm">
-            <div class="form-group">
-                <label class="col-form-label" for="categoria">Categoria</label>
-                <%= select_tag :category, options_for_select(
+        <%# <div class="col-sm"> %>
+            <%# <div class="form-group"> %>
+                <%# <label class="col-form-label" for="categoria">Categoria</label> %>
+                <%# <%= select_tag :category, options_for_select(
                     @categories.map {|category| [category.category, category.id]}
                 ), {
                     :class => "form-control",
                     :include_blank => "Todo"
                 } %>
-            </div>
-        </div>
+            <%# </div> %>
+        <%# </div> %>
     </div>
     <div class="row">
         <div class="col-lg-1 offset-lg-11">
@@ -54,25 +60,21 @@
                     <thead>
                     <tr>
 
-                        <th data-toggle="true">Habilidad</th>
-                        <th data-hide="phone">Categoria</th>
+                        <th data-toggle="true">Categoria</th>
                         <th class="text-right" data-sort-ignore="true">Acciones</th>
 
                     </tr>
                     </thead>
                     <tbody>
-                    <% @abilities.each_with_index do |ability, index| %>
+                    <% @categories.each_with_index do |category, index| %>
                         <tr>
-                            <td id="ability-<%= index %>">
-                                <%= ability.ability %>
-                            </td>
                             <td id="category-<%= index %>">
-                               <%= ability.abilities_type.type_name %>
+                                <%= category.category %>
                             </td>
                             <td class="text-right">
                                 <div class="btn-group">
-                                    <button data-toggle="modal" href="#modificar-habilidad-form" id="edit-button-<%= index %>" class="btn-warning btn btn-xs" style="border-radius: 0px;">Editar</button>
-                                    <%= link_to "/abilities/#{ability.id}", :controller => "abilities", :action => "destroy_index", :method => "delete" do %>
+                                    <button data-toggle="modal" href="#modificar-categoria-form" id="edit-button-<%= index %>" class="btn-warning btn btn-xs" style="border-radius: 0px;">Editar</button>
+                                    <%= link_to "/abilities/blandas/categories/#{category.id}", :controller => "abilities", :action => "categories_destroy", :method => "delete" do %>
                                         <button class="btn-danger btn btn-xs" style="border-radius: 0px;">Borrar</button>
                                     <% end %>
                                 </div>
@@ -97,32 +99,25 @@
 
 </div>
 
-<div id="modificar-habilidad-form" class="modal fade" aria-hidden="true">
+<div id="modificar-categoria-form" class="modal fade" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
                 <div class="row">
-                    <div class="col-sm"><h3 class="m-t-none m-b">Modificar Habilidad</h3>
-                        <form id="modificar-form" action="/abilities/1" accept-charset="UTF-8" method="put">
-                            <div class="form-group">
-                                <label>Habilidad</label>
-                                <%= text_field_tag :updated_ability, params[:updated_ability], {
-                                    :class => "form-control",
-                                    :id => "updated_ability_ability",
-                                    :placeholder => "Habilidad"
-                                }%>
-                            </div>
+                    <div class="col-sm"><h3 class="m-t-none m-b">Modificar Categoria</h3>
+                        <%= form_tag "/abilities/blandas/categories/1", :method => 'put', :id => 'modificar-form' do %>
                             <div class="form-group">
                                 <label>Categoria</label>
-                                <%= select_tag :updated_category, options_for_select([["Habilidad Técnica", 1], ["Habilidad Blanda", 2]]), {
+                                <%= text_field_tag :updated_category, params[:updated_category], {
                                     :class => "form-control",
-                                    :id => "updated_ability_category"
+                                    :id => "updated_category",
+                                    :placeholder => "Categoria"
                                 }%>
                             </div>
                             <div>
                                 <button class="btn btn-primary float-right" type="submit"><strong>Guardar Cambios</strong></button>
                             </div>
-                        </form>
+                        <% end %>
                     </div>
                 </div>
             </div>
@@ -135,13 +130,13 @@
 <script type="text/javascript">
 
 $(function() {
+
     $('.footable').footable();
 
     $('[id^="edit-button-"]').on('click', (e) => {
         const index = e.target.id.substring(12, e.target.id.length)
-        $("#updated_ability_ability").val(gon.abilities[index].ability)
-        $("#updated_ability_category").val(gon.abilities[index].category)
-        $("#modificar-form").attr("action", `/abilities/${gon.abilities[index].id}`)
+        $("#updated_category").val(gon.categories[index].category)
+        $("#modificar-form").attr("action", `/abilities/blandas/categories/${gon.categories[index].id}`)
     })
 
 
