--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
     <title>Contac | <%= @title %></title>
     <link rel="icon" href="<%= image_path('favicon.png') %>">
 
+    <%= include_gon %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -30,7 +31,7 @@
     <div id="wrapper" class="<%= params[:controller] %>.<%= params[:action] %>">
 
         <!-- Navigation -->
-        <%= render 'layouts/navigation' %>
+        <%= render 'layouts/navigation', :categories => @categories, :areas => @areas %>
 
         <!-- Page wraper -->
         <div id="page-wrapper" class="gray-bg <%= @extra_class %>">
