--- a/app/views/profiles/_tecnicas_profile_ability_fields.html.erb
+++ b/app/views/profiles/_tecnicas_profile_ability_fields.html.erb
@@ -1,18 +1,14 @@
 <div class="row">
     <div class="col-lg-6 habilidad">
         <div class="form-group">
-            <label>Habilidad </label>
-            <div>
-                <%= f.select :ability, options_for_select( @tecnicas.map {|ability| [ability.ability, ability.id]} ), {
-                    :class => "habilidad_select form-control"
-                } %>
-            </div>
+            <label>Competencia</label>
+            <%= f.select :ability, options_for_select(@tecnicas.map {|ability| [ability.ability, ability.id]})%>
         </div>
     </div>
     <div class="col-md-6">
         <div class="form-group">
             <label>Valor esperado</label>
-            <%= f.text_field :value %>
+            <%= f.text_field :value, { :class => "form-control", :value => 0 } %>
         </div>
     </div>
 </div>
