--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -49,7 +49,7 @@
                     <thead>
                     <tr>
                         <th data-toggle="true">Perfil</th>
-                        <th data-hide="all">Descripción</th>
+                        <th data-hide="all">Objetivo</th>
                         <th data-hide="all">Habilidades</th>
                         <th class="text-right" data-sort-ignore="true">Acciones</th>
                     </tr>
@@ -61,7 +61,7 @@
                             <%= profile.profile %>
                         </td>
                         <td>
-                            <%= profile.description %>
+                            <%= profile.objective %>
                         </td>
                         <td>
                             <table class="table table-stripped" style="margin: 20px 0px;">
