--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -38,7 +38,7 @@
                                     <%= f.text_area :objective, {:class => "form-control", :rows => "5"} %>
                                 </div>
                                 <div class="form-group">
-                                    <%= f.label "Funciones *s" %>
+                                    <%= f.label "Funciones *" %>
                                     <%= f.text_area :functions, {:class => "form-control", :rows => "10"} %>
                                 </div>
                             </div>
@@ -52,10 +52,10 @@
                         </div>
                     </fieldset>
 
-                    <h1>Habilidades Técnicas</h1>
+                    <h1>Competencias Técnicas</h1>
                     <fieldset style="position: relative">
-                        <h2>Habilidades Técnicas</h2>
-                        <div class="abilities-fields-tecnicas">
+                        <h2>Competencias Técnicas</h2>
+                        <div id="add-tecnicas-association" class="abilities-fields-tecnicas">
                             <%= f.fields_for :profile_abilities do |builder| %>
                                 <%= render 'tecnicas_profile_ability_fields', f: builder %>
                             <% end %>
@@ -64,16 +64,16 @@
                             <div class="offset-lg-11 col-lg-1">
                                 <%= link_to_add_association f, :profile_abilities, :partial => "tecnicas_profile_ability_fields", data: {
                                     association_insertion_node: '.abilities-fields-tecnicas', association_insertion_method: :append
-                                }, :class => "btn btn-primary", :id => "add_association" do %>
+                                }, :class => "btn btn-primary" do %>
                                     <i class="fa fa-plus"></i>&nbsp;Agregar Habilidad
                                 <% end %>
                             </div>
                         </div>
                     </fieldset>
-                    <h1>Habilidades Blandas</h1>
+                    <h1>Competencias Blandas</h1>
                     <fieldset style="position: relative">
-                        <h2>Habilidades Blandas</h2>
-                        <div class="abilities-fields-blandas">
+                        <h2>Competencias Blandas</h2>
+                        <div id="add-blandas-association" class="abilities-fields-blandas">
                             <%= f.fields_for :profile_abilities do |builder| %>
                                 <%= render 'blandas_profile_ability_fields', f: builder %>
                             <% end %>
@@ -175,29 +175,55 @@ $(function() {
         }
     });
 
-    $('.touchspin').TouchSpin({
-        min: 0,
-        max: 7,
-        step: 1,
-        verticalbuttons: true,
-        buttondown_class: 'btn btn-white',
-        buttonup_class: 'btn btn-white',
-        verticalupclass: 'fa fa-sort-asc',
-        verticaldownclass: 'fa fa-sort-desc'
-    });
-
-    $('.abilities-fields').on('cocoon:after-insert', () => {
-        
+    $('#add-tecnicas-association').on('cocoon:after-insert', (e, insertedItem) => {
+        ability_select = insertedItem[0].firstChild.nextSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
+        ability_select.classList.add("form-control")
+        ability_select.classList.add("habilidades_select")
+        $(ability_select).select2({
+            placeholder: "Seleccione las Competencias",
+            language: {
+                noResults: function (params) {
+                return "No hay coincidencias";
+                }
+            }
+        })
+        valor_esperado = insertedItem[0].lastChild.previousSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
+        $(valor_esperado).TouchSpin({
+            min: 0,
+            max: 7,
+            step: 1,
+            verticalbuttons: true,
+            buttondown_class: 'btn btn-white',
+            buttonup_class: 'btn btn-white',
+            verticalupclass: 'fa fa-sort-asc',
+            verticaldownclass: 'fa fa-sort-desc'
+        });
     })
 
-    $(".habilidad_select").select2({
-        placeholder: "Seleccione las habilidades",
-        language: {
-            noResults: function (params) {
-            return "No hay coincidencias";
+    $('#add-blandas-association').on('cocoon:after-insert', (e, insertedItem) => {
+        ability_select = insertedItem[0].firstChild.nextSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
+        ability_select.classList.add("form-control")
+        ability_select.classList.add("habilidades_select")
+        $(ability_select).select2({
+            placeholder: "Seleccione las Competencias",
+            language: {
+                noResults: function (params) {
+                return "No hay coincidencias";
+                }
             }
-        }
-    });
+        })
+        valor_esperado = insertedItem[0].lastChild.previousSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
+        $(valor_esperado).TouchSpin({
+            min: 0,
+            max: 7,
+            step: 1,
+            verticalbuttons: true,
+            buttondown_class: 'btn btn-white',
+            buttonup_class: 'btn btn-white',
+            verticalupclass: 'fa fa-sort-asc',
+            verticaldownclass: 'fa fa-sort-desc'
+        });
+    })
 
     $("#agregar-habilidad-tecnica").on("click", (e) => {
         console.log(e)
