--- a/app/views/abilities_blandas/index.html.erb
+++ b/app/views/abilities_blandas/index.html.erb
@@ -32,7 +32,7 @@
         </div>
         <div class="col-sm">
             <div class="form-group">
-                <label class="col-form-label" for="categoria">Categoria</label>
+                <label class="col-form-label" for="categoria">Categoría</label>
                 <%= select_tag :category, options_for_select(
                     @categories.map {|category| [category.category, category.id]}
                 ), {
@@ -44,7 +44,7 @@
         </div>
         <div class="col-sm">
             <div class="form-group">
-                <label class="col-form-label" for="categoria">Area</label>
+                <label class="col-form-label" for="categoria">Área</label>
                 <%= select_tag :area, options_for_select(
                     @areas.map {|area| [area.area, area.id]}
                 ), {
@@ -74,8 +74,8 @@
                     <tr>
 
                         <th data-toggle="true">Habilidad</th>
-                        <th data-hide="phone">Categoria</th>
-                        <th data-hide="phone">Area</th>
+                        <th data-hide="phone">Categoría</th>
+                        <th data-hide="phone">Área</th>
                         <th class="text-right" data-sort-ignore="true">Acciones</th>
 
                     </tr>
@@ -98,6 +98,22 @@
                                     <%= link_to "/abilities/#{ability.id}", :controller => "abilities", :action => "destroy", :method => "delete" do %>
                                         <button class="btn-danger btn btn-xs" style="border-radius: 0px;">Borrar</button>
                                     <% end %>
+                                </div>
+                            </td>
+                        </tr>
+                    <% end %>
+
+                    <% if (@abilities.empty?) %>
+                        <tr>
+                            <td id="ability">
+                                No hay coincidencias
+                            </td>
+                            <td id="category">
+                            </td>
+                            <td id="area">
+                            </td>
+                            <td class="text-right">
+                                <div class="btn-group">
                                 </div>
                             </td>
                         </tr>
@@ -262,6 +278,24 @@ $(function() {
             text: $("#updated_area_blanda").val()
         }))
         $("#updated_blanda_area").val($("#updated_area_blanda").val())
+    })
+
+    $("#category_search").select2({
+        placeholder: "Categoría",
+        language: {
+            noResults: function (params) {
+            return "No hay coincidencias";
+            }
+        }
+    })
+
+    $("#area_search").select2({
+        placeholder: "Área",
+        language: {
+            noResults: function (params) {
+            return "No hay coincidencias";
+            }
+        }
     })
 
 });
