--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -37,8 +37,15 @@
                     <li class="<%= is_active_action('new') %>"><a href="<%= url_for :controller => 'admins', :action => 'new' %>"><i class="fa fa-plus"></i>Crear Administrador</a></li>
                 </ul>
             </li>
+            <li class="<%= is_active_controller('periods') %>">
+                <a href="#"><i class="fa fa-calendar-o"></i> <span class="nav-label" data-i18n="nav.dashboard">Períodos</span><span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level collapse <%= is_active_controller('periods', 'in') %>">
+                    <li class="<%= is_active_action('index') %>"><a href="<%= url_for :controller => 'admins', :action => 'index' %>"><i class="fa fa-calendar-o"></i>Períodos</a></li>
+                    <li class="<%= is_active_action('new') %>"><a href="<%= url_for :controller => 'admins', :action => 'new' %>"><i class="fa fa-plus"></i>Crear Administrador</a></li>
+                </ul>
+            </li>
             <li class="<%= is_active_controller('profiles') %>">
-                <a href="#"><i class="fa fa-tasks"></i> <span class="nav-label" data-i18n="nav.dashboard">Perfiles</span><span class="fa arrow"></span></a>
+                <a href="<%= url_for :controller => 'profiles', :action => 'index' %>"><i class="fa fa-tasks"></i> <span class="nav-label" data-i18n="nav.dashboard">Perfiles</span><span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse <%= is_active_controller('profiles', 'in') %>">
                     <li class="<%= is_active_action('index') %>"><a href="<%= url_for :controller => 'profiles', :action => 'index' %>"><i class="fa fa-list"></i>Perfiles</a></li>
                     <li class="<%= is_active_action('new') %>"><a href="<%= url_for :controller => 'profiles', :action => 'new' %>"><i class="fa fa-plus"></i>Crear Perfil</a></li>
@@ -49,7 +56,7 @@
                 <ul class="nav nav-second-level collapse <%= is_active_controller('abilities', 'in') %> <%= is_active_controller('abilities_tecnicas', 'in') %> <%= is_active_controller('abilities_blandas', 'in') %> <%= is_active_controller('categories', 'in') %> <%= is_active_controller('areas', 'in') %>">
                     <li class="<%= is_active_controller('abilities') %>"><a href="<%= url_for :controller => 'abilities', :action => 'index' %>"><i class="fa fa-list"></i>Todo</a></li>
                     <li class="<%= is_active_controller('abilities_blandas') %> <%= is_active_controller('categories') %> <%= is_active_controller('areas') %>">
-                        <a href="#"><i class="fa fa-list"></i>Blandas<span class="fa arrow"></span></a>
+                        <a href="/abilities/blandas"><i class="fa fa-smile-o"></i>Blandas<span class="fa arrow"></span></a>
                         <ul class="nav nav-third-level">
                             <li class="<%= is_active_controller_action('abilities_blandas', 'index') %>" >
                                 <a href="/abilities/blandas">Competencias</a>
@@ -62,7 +69,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="<%= is_active_controller('abilities_tecnicas') %>"><a href="<%= url_for :controller => 'abilities_tecnicas', :action => 'index' %>"><i class="fa fa-list"></i>Técnicas</a></li>
+                    <li class="<%= is_active_controller('abilities_tecnicas') %>"><a href="<%= url_for :controller => 'abilities_tecnicas', :action => 'index' %>"><i class="fa fa-wrench"></i>Técnicas</a></li>
                     <li class="<%= is_active_action('new') %>"><a data-toggle="modal" href="#crear-habilidad-form"><i class="fa fa-plus"></i>Crear Competencia</a></li>
                 </ul>
             </li>
