--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -112,7 +112,7 @@
 // console.log('<%= @title %>')
 
 $(function() {
-    $('.footable').footable();
+    $('.footable').footable()
     $(".habilidades_select").select2({
         placeholder: "Seleccione las habilidades",
         language: {
@@ -120,7 +120,7 @@ $(function() {
             return "No hay coincidencias";
             }
         }
-    });
+    })
 });
 
 </script>
