--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Crear Colaborador</h2>
+        <h2>Editar Administrador</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="<%= url_for :controller => 'dashboard', :action => 'index' %>">Colaboradores</a>
+                <a href="<%= url_for :controller => 'dashboard', :action => 'index' %>">Administradores</a>
             </li>
             <li class="breadcrumb-item">
-                <strong>Crear Colaborador</strong>
+                <strong>Editar Administrador</strong>
             </li>
         </ol>
     </div>
@@ -17,10 +17,10 @@
     <div class="col-lg-12">
         <div class="ibox ">
             <div class="ibox-title">
-                <h5>Rellenar los campos del nuevo colaborador</h5>
+                <h5>Editar los campos de Administrador</h5>
             </div>
             <div class="ibox-content">
-                <%= form_for @collaborator, :url => "/collaborators", :method => "post" do |f|%>
+                <%= form_for @admin, :url => "/admins/#{@admin.id}", :method => "put" do |f|%>
 
                     <div class="form-group row">
                         <div class="form-group col-md-6 col-sm-12">
@@ -52,14 +52,6 @@
                             <%= f.text_field :password_digest, {:class => "form-control", type: "password"} %>
                         </div>
                     </div>
-                    <div class="hr-line-dashed"></div>
-
-                    <div class="form-group row">
-                        <div class="form-group col-md-6 col-sm-12">
-                            <%= f.label "Perfil Professional" %>
-                            <%= select_tag "user[profile_id]", options_for_select(@profiles.map {|profile| [profile.profile, profile.id]}), {:class => "form-control", id: "user_profile_id", include_blank: true} %>
-                        </div>
-                    </div>
 
                     <div class="hr-line-dashed"></div>
                     <div class="form-group row">
@@ -73,22 +65,3 @@
     </div>
 </div>
 </div>
-
-<% content_for :javascript do %>
-
-<script type="text/javascript">
-
-$(function() {
-    $("#user_profile_id").select2({
-        placeholder: "Seleccione el perfil",
-        language: {
-            noResults: function (params) {
-            return "No hay coincidencias";
-            }
-        }
-    })
-})
-
-</script>
-
-<% end %>
