--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,9 +1,9 @@
 <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-lg-10">
-        <h2>Colaboradores</h2>
+        <h2>Administradores</h2>
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="<%= url_for :controller => 'collaborators', :action => 'index' %>">Colaboradores</a>
+                <a href="<%= url_for :controller => 'collaborators', :action => 'index' %>">Administradores</a>
             </li>
         </ol>
     </div>
@@ -12,7 +12,7 @@
 <div class="wrapper wrapper-content animated fadeInRight">
 
 
-<%= form_tag collaborators_path, :method => 'get' do %>
+<%= form_tag admins_path, :method => 'get' do %>
 <div class="ibox-content m-b-sm border-bottom">
     <div class="row">
         <div class="col-sm-2">
@@ -59,7 +59,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col offset-11">
+        <div class="col-lg-1 offset-lg-11">
             <%= button_tag :submit, {:class => "btn btn-primary"} do %>
                 <i class="fa fa-search"></i>&nbsp;Buscar
             <% end %>
@@ -75,42 +75,39 @@
                 <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
                     <thead>
                     <tr>
-
                         <th data-toggle="true">Nombre</th>
                         <th data-hide="phone">Rut</th>
                         <th data-hide="phone,tablet" >Correo Electrónico</th>
-                        <th data-hide="phone,tablet" >Perfil</th>
-                        <th data-hide="phone">Estado</th>
                         <th class="text-right" data-sort-ignore="true">Acciones</th>
-
                     </tr>
                     </thead>
                     <tbody>
+                    <% @admins.each do |user| %>
                     <tr>
                         <td>
-                            Juanito Perez
+                            <%= user.name %> <%= user.last_name %>
                         </td>
                         <td>
-                            19522912-0
+                            <%= user.rut %>
                         </td>
                         <td>
-                            juanitoperez@contac.cl
-                        </td>
-                        <td>
-                            Ingeniero Informático
-                        </td>
-                        <td>
-                            <span class="label <%= state_class("activo") %>">Activo</span>
+                            <%= user.email %>
                         </td>
                         <td class="text-right">
                             <div class="btn-group">
-                                <button class="btn-white btn btn-xs"><%= link_to "Ver", collaborators_path({id: '1'}) %></button>
-                                <button class="btn-warning btn btn-xs">Editar</button>
-                                <button class="btn-danger btn btn-xs">Borrar</button>
+                                <%= link_to "/admins/#{user.id}", :controller => "admins", :action => "show", :method => "get" do %>
+                                    <button class="btn-white btn btn-xs" style="border-radius: 0px;">Ver</button>
+                                <% end %>
+                                <%= link_to "/admins/#{user.id}/edit", :controller => "admins", :action => "edit", :method => "get" do %>
+                                    <button class="btn-warning btn btn-xs" style="border-radius: 0px;">Editar</button>
+                                <% end %>
+                                <%= link_to "/admins/#{user.id}", :controller => "admins", :action => "destroy", :method => "delete" do %>
+                                    <button class="btn-danger btn btn-xs" style="border-radius: 0px;">Borrar</button>
+                                <% end %>
                             </div>
                         </td>
                     </tr>
-
+                    <% end %>
                     </tbody>
                     <tfoot>
                     <tr>
