--- a/app/views/collaborators/index.html.erb
+++ b/app/views/collaborators/index.html.erb
@@ -75,42 +75,47 @@
                 <table class="footable table table-stripped toggle-arrow-tiny" data-page-size="15">
                     <thead>
                     <tr>
-
                         <th data-toggle="true">Nombre</th>
                         <th data-hide="phone">Rut</th>
                         <th data-hide="phone,tablet" >Correo Electrónico</th>
                         <th data-hide="phone,tablet" >Perfil</th>
                         <th data-hide="phone">Estado</th>
                         <th class="text-right" data-sort-ignore="true">Acciones</th>
-
                     </tr>
                     </thead>
                     <tbody>
+                    <% @collaborators.each do |user| %>
                     <tr>
                         <td>
-                            Juanito Perez
+                            <%= user.name %> <%= user.last_name %>
                         </td>
                         <td>
-                            19522912-0
+                            <%= user.rut %>
                         </td>
                         <td>
-                            juanitoperez@contac.cl
+                            <%= user.email %>
                         </td>
                         <td>
-                            Ingeniero Informático
+                            <%= user.collaborator.profile.profile %>
                         </td>
                         <td>
-                            <span class="label <%= state_class("activo") %>">Activo</span>
+                            <span class="label <%= state_class(user.collaborator.state.state) %>"><%= user.collaborator.state.state %></span>
                         </td>
                         <td class="text-right">
                             <div class="btn-group">
-                                <button class="btn-white btn btn-xs"><%= link_to "Ver", collaborators_path({id: '1'}) %></button>
-                                <button class="btn-warning btn btn-xs">Editar</button>
-                                <button class="btn-danger btn btn-xs">Borrar</button>
+                                <%= link_to "/collaborators/#{user.id}", :controller => "collaborators", :action => "show", :method => "get" do %>
+                                    <button class="btn-white btn btn-xs" style="border-radius: 0px;">Ver</button>
+                                <% end %>
+                                <%= link_to "/collaborators/#{user.id}/edit", :controller => "collaborators", :action => "edit", :method => "get" do %>
+                                    <button class="btn-warning btn btn-xs" style="border-radius: 0px;">Editar</button>
+                                <% end %>
+                                <%= link_to "/collaborators/#{user.id}", :controller => "collaborators", :action => "destroy", :method => "delete" do %>
+                                    <button class="btn-danger btn btn-xs" style="border-radius: 0px;">Borrar</button>
+                                <% end %>
                             </div>
                         </td>
                     </tr>
-
+                    <% end %>
                     </tbody>
                     <tfoot>
                     <tr>
