--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -23,22 +23,22 @@
             <li class="<%= is_active_controller('dashboard') %>">
                 <a href="<%= url_for :controller => 'dashboard', :action => 'index'%>"><i class="fa fa-th-large"></i> <span class="nav-label" data-i18n="nav.dashboard">Dashboards</span></a>
             </li>
-            <li class="<%= is_active_controller('collaborators') %>">
-                <a href="#"><i class="fa fa-users"></i> <span class="nav-label" data-i18n="nav.dashboard">Colaboradores</span><span class="fa arrow"></span></a>
-                <ul class="nav nav-second-level collapse <%= is_active_controller('collaborators', 'in') %>">
-                    <li class="<%= is_active_action('index') %>"><a href="<%= url_for :controller => 'collaborators', :action => 'index' %>"><i class="fa fa-list"></i>Colaboradores</a></li>
-                    <li class="<%= is_active_action('new') %>"><a href="<%= url_for :controller => 'collaborators', :action => 'new' %>"><i class="fa fa-plus"></i>Crear Colaborador</a></li>
-                </ul>
-            </li>
             <li class="<%= is_active_controller('admins') %>">
-                <a href="#"><i class="fa fa-id-badge"></i> <span class="nav-label" data-i18n="nav.dashboard">Administradores</span><span class="fa arrow"></span></a>
+                <a href="<%= url_for :controller => 'admins', :action => 'index' %>"><i class="fa fa-id-badge"></i> <span class="nav-label" data-i18n="nav.dashboard">Administradores</span><span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse <%= is_active_controller('admins', 'in') %>">
                     <li class="<%= is_active_action('index') %>"><a href="<%= url_for :controller => 'admins', :action => 'index' %>"><i class="fa fa-list"></i>Administradores</a></li>
                     <li class="<%= is_active_action('new') %>"><a href="<%= url_for :controller => 'admins', :action => 'new' %>"><i class="fa fa-plus"></i>Crear Administrador</a></li>
                 </ul>
             </li>
+            <li class="<%= is_active_controller('collaborators') %>">
+                <a href="<%= url_for :controller => 'collaborators', :action => 'index' %>"><i class="fa fa-users"></i> <span class="nav-label" data-i18n="nav.dashboard">Colaboradores</span><span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level collapse <%= is_active_controller('collaborators', 'in') %>">
+                    <li class="<%= is_active_action('index') %>"><a href="<%= url_for :controller => 'collaborators', :action => 'index' %>"><i class="fa fa-list"></i>Colaboradores</a></li>
+                    <li class="<%= is_active_action('new') %>"><a href="<%= url_for :controller => 'collaborators', :action => 'new' %>"><i class="fa fa-plus"></i>Crear Colaborador</a></li>
+                </ul>
+            </li>
             <li class="<%= is_active_controller('periods') %>">
-                <a href="#"><i class="fa fa-calendar-o"></i> <span class="nav-label" data-i18n="nav.dashboard">Períodos</span><span class="fa arrow"></span></a>
+                <a href="<%= url_for :controller => 'admins', :action => 'index' %>"><i class="fa fa-calendar-o"></i> <span class="nav-label" data-i18n="nav.dashboard">Períodos</span><span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level collapse <%= is_active_controller('periods', 'in') %>">
                     <li class="<%= is_active_action('index') %>"><a href="<%= url_for :controller => 'admins', :action => 'index' %>"><i class="fa fa-calendar-o"></i>Períodos</a></li>
                     <li class="<%= is_active_action('new') %>"><a href="<%= url_for :controller => 'admins', :action => 'new' %>"><i class="fa fa-plus"></i>Crear Administrador</a></li>
