--- a/app/views/profiles/_blandas_profile_ability_fields.html.erb
+++ b/app/views/profiles/_blandas_profile_ability_fields.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-lg-6 habilidad">
+    <div class="col-md-4 habilidad">
         <div class="form-group">
             <label>Competencia</label>
             <%= f.select :ability, options_for_select( @blandas.map {|ability| [ability.ability, ability.id]} ) %>
@@ -8,7 +8,8 @@
     <div class="col-md-6">
         <div class="form-group">
             <label>Valor esperado</label>
-            <%= f.text_field :value %>
+            <%= f.text_field :value, {:class => "form-control", value: "0", type: "number", min: "0", max: "5"} %>
         </div>
     </div>
+    
 </div>
