--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -15,85 +15,79 @@
 <div class="wrapper wrapper-content animated fadeInRight">
 <div class="row">
     <div class="col-lg-12">
-        <div class="ibox">
+        <div class="ibox ">
+            <div class="ibox-title">
+                <h5>Rellenar los campos del nuevo perfil</h5>
+            </div>
             <div class="ibox-content">
-                <h2>
-                    Validation Wizard Form
-                </h2>
-                <p>
-                    This example show how to use Steps with jQuery Validation plugin.
-                </p>
-                <%= form_for @profile, :html => {:id => "form", :class => "wizard-big"} do |f| %>
-                    <h1>Perfil</h1>
-                    <fieldset style="position: relative">
-                        <h2>Perfil</h2>
-                        <div class="row">
-                            <div class="col-lg-8">
-                                <div class="form-group">
-                                    <%= f.label "Nombre del perfil *" %>
-                                    <%= f.text_field :profile, {:class => "form-control"} %>
-                                </div>
-                                <div class="form-group">
-                                    <%= f.label "Objetivo *" %>
-                                    <%= f.text_area :objective, {:class => "form-control", :rows => "5"} %>
-                                </div>
-                                <div class="form-group">
-                                    <%= f.label "Funciones *" %>
-                                    <%= f.text_area :functions, {:class => "form-control", :rows => "10"} %>
-                                </div>
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="text-center">
-                                    <div style="margin-top: 20px">
-                                        <i class="fa fa-tasks" style="font-size: 180px;color: #e5e5e5 "></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </fieldset>
+                <%= form_for @profile do |f| %>
+                    <div class="form-group">
+                        <%= f.label "Nombre del perfil *" %>
+                        <%= f.text_field :profile, {:class => "form-control"} %>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <%= f.label "Reporta a:" %>
+                        <%= select_tag "reports_tos", options_for_select(@profiles.map {|profile| [profile.profile, profile.id]}), {:class => "form-control", :id => "reports_to_fields", :include_blank => true, :multiple => true} %>
+                    </div>
+                    <div class="form-group">
+                        <%= f.label "Supervisión Directa:" %>
+                        <%= select_tag "direct_supervisions", options_for_select(@profiles.map {|profile| [profile.profile, profile.id]}), {:class => "form-control", :id => "direct_supervision_fields", :include_blank => true, :multiple => true} %>
+                    </div>
+                    <div class="form-group">
+                        <%= f.label "Es Reemplazado por:" %>
+                        <%= select_tag "replace_bies", options_for_select(@profiles.map {|profile| [profile.profile, profile.id]}), {:class => "form-control", :id => "replace_by_fields", :include_blank => true, :multiple => true} %>
+                    </div>
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group">
+                        <%= f.label "Objetivo *" %>
+                        <%= f.text_area :objective, {:class => "form-control", :rows => "5"} %>
+                    </div>
+                    <div class="form-group">
+                        <%= f.label "Funciones *" %>
+                        <%= f.text_area :functions, {:class => "form-control", :rows => "15"} %>
+                    </div>
 
-                    <h1>Competencias Técnicas</h1>
-                    <fieldset style="position: relative">
-                        <h2>Competencias Técnicas</h2>
-                        <div id="add-tecnicas-association" class="abilities-fields-tecnicas">
-                            <%= f.fields_for :profile_abilities do |builder| %>
-                                <%= render 'tecnicas_profile_ability_fields', f: builder %>
+                    <div class="hr-line-dashed"></div>
+                    <h2>Competencias Blandas</h2>
+                    <div id="add-blandas-association" class="abilities-fields-blandas">
+                        <%= f.fields_for :profile_abilities do |builder| %>
+                            <%= render 'blandas_profile_ability_fields', f: builder %>
+                        <% end %>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm">
+                            <%= link_to_add_association f, :profile_abilities, :partial => "blandas_profile_ability_fields", data: {
+                                association_insertion_node: '.abilities-fields-blandas', association_insertion_method: :append
+                            }, :class => "btn btn-primary float-right", :id => "add_association" do %>
+                                <i class="fa fa-plus"></i>&nbsp;Agregar Habilidad
                             <% end %>
                         </div>
-                        <div class="row">
-                            <div class="offset-lg-11 col-lg-1">
-                                <%= link_to_add_association f, :profile_abilities, :partial => "tecnicas_profile_ability_fields", data: {
-                                    association_insertion_node: '.abilities-fields-tecnicas', association_insertion_method: :append
-                                }, :class => "btn btn-primary" do %>
-                                    <i class="fa fa-plus"></i>&nbsp;Agregar Habilidad
-                                <% end %>
-                            </div>
-                        </div>
-                    </fieldset>
-                    <h1>Competencias Blandas</h1>
-                    <fieldset style="position: relative">
-                        <h2>Competencias Blandas</h2>
-                        <div id="add-blandas-association" class="abilities-fields-blandas">
-                            <%= f.fields_for :profile_abilities do |builder| %>
-                                <%= render 'blandas_profile_ability_fields', f: builder %>
+                    </div>
+                    
+                    <div class="hr-line-dashed"></div>
+                    <h2>Competencias Técnicas</h2>
+                    <div id="add-tecnicas-association" class="abilities-fields-tecnicas">
+                        <%= f.fields_for :profile_abilities do |builder| %>
+                            <%= render 'tecnicas_profile_ability_fields', f: builder %>
+                        <% end %>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm">
+                            <%= link_to_add_association f, :profile_abilities, :partial => "tecnicas_profile_ability_fields", data: {
+                                association_insertion_node: '.abilities-fields-tecnicas', association_insertion_method: :append
+                            }, :class => "btn btn-primary float-right" do %>
+                                <i class="fa fa-plus"></i>&nbsp;Agregar Habilidad
                             <% end %>
                         </div>
-                        <div class="row">
-                            <div class="offset-lg-11 col-lg-1">
-                                <%= link_to_add_association f, :profile_abilities, :partial => "blandas_profile_ability_fields", data: {
-                                    association_insertion_node: '.abilities-fields-blandas', association_insertion_method: :append
-                                }, :class => "btn btn-primary", :id => "add_association" do %>
-                                    <i class="fa fa-plus"></i>&nbsp;Agregar Habilidad
-                                <% end %>
-                            </div>
+                    </div>
+                    
+                    <div class="hr-line-dashed"></div>
+                    <div class="form-group row">
+                        <div class="col-sm-4 col-sm-offset-2">
+                            <button class="btn btn-primary btn-sm" type="submit">Guardar</button>
                         </div>
-                    </fieldset>
-
-                    <h1>Finalizar</h1>
-                    <fieldset style="position: relative">
-                        <h2>Terms and Conditions</h2>
-                        <input id="acceptTerms" name="acceptTerms" type="checkbox" class="required"> <label for="acceptTerms">I agree with the Terms and Conditions.</label>
-                    </fieldset>
+                    </div>
                 <% end %>
             </div>
         </div>
@@ -187,17 +181,17 @@ $(function() {
                 }
             }
         })
-        valor_esperado = insertedItem[0].lastChild.previousSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
-        $(valor_esperado).TouchSpin({
-            min: 0,
-            max: 7,
-            step: 1,
-            verticalbuttons: true,
-            buttondown_class: 'btn btn-white',
-            buttonup_class: 'btn btn-white',
-            verticalupclass: 'fa fa-sort-asc',
-            verticaldownclass: 'fa fa-sort-desc'
-        });
+        // valor_esperado = insertedItem[0].lastChild.previousSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
+        // $(valor_esperado).TouchSpin({
+        //     min: 0,
+        //     max: 7,
+        //     step: 1,
+        //     verticalbuttons: true,
+        //     buttondown_class: 'btn btn-white',
+        //     buttonup_class: 'btn btn-white',
+        //     verticalupclass: 'fa fa-sort-asc',
+        //     verticaldownclass: 'fa fa-sort-desc'
+        // });
     })
 
     $('#add-blandas-association').on('cocoon:after-insert', (e, insertedItem) => {
@@ -212,21 +206,44 @@ $(function() {
                 }
             }
         })
-        valor_esperado = insertedItem[0].lastChild.previousSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
-        $(valor_esperado).TouchSpin({
-            min: 0,
-            max: 7,
-            step: 1,
-            verticalbuttons: true,
-            buttondown_class: 'btn btn-white',
-            buttonup_class: 'btn btn-white',
-            verticalupclass: 'fa fa-sort-asc',
-            verticaldownclass: 'fa fa-sort-desc'
-        });
+        // valor_esperado = insertedItem[0].lastChild.previousSibling.firstChild.nextSibling.firstChild.nextSibling.nextSibling.nextSibling
+        // $(valor_esperado).TouchSpin({
+        //     min: 0,
+        //     max: 7,
+        //     step: 1,
+        //     verticalbuttons: true,
+        //     buttondown_class: 'btn btn-white',
+        //     buttonup_class: 'btn btn-white',
+        //     verticalupclass: 'fa fa-sort-asc',
+        //     verticaldownclass: 'fa fa-sort-desc'
+        // });
     })
 
-    $("#agregar-habilidad-tecnica").on("click", (e) => {
-        console.log(e)
+    $("#reports_to_fields").select2({
+        placeholder: "Seleccione los perfiles",
+        language: {
+            noResults: function (params) {
+            return "No hay coincidencias";
+            }
+        }
+    })
+
+    $("#direct_supervision_fields").select2({
+        placeholder: "Seleccione los perfiles",
+        language: {
+            noResults: function (params) {
+            return "No hay coincidencias";
+            }
+        }
+    })
+    
+    $("#replace_by_fields").select2({
+        placeholder: "Seleccione los perfiles",
+        language: {
+            noResults: function (params) {
+            return "No hay coincidencias";
+            }
+        }
     })
 
 });
