--- a/app/views/profiles/_tecnicas_profile_ability_fields.html.erb
+++ b/app/views/profiles/_tecnicas_profile_ability_fields.html.erb
@@ -1,14 +1,20 @@
 <div class="row">
-    <div class="col-lg-6 habilidad">
+    <div class="col-md-6 habilidad">
         <div class="form-group">
             <label>Competencia</label>
             <%= f.select :ability, options_for_select(@tecnicas.map {|ability| [ability.ability, ability.id]})%>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <div class="form-group">
             <label>Valor esperado</label>
             <%= f.text_field :value, {:class => "form-control", value: "0", type: "number", min: "0", max: "5"} %>
+        </div>
+    </div>
+    <div class="col-md-2">
+        <div class="form-group">
+            <label> &nbsp; </label>
+            <button class="form-control btn btn-danger eliminar-competencia" type="button"><i class="fa fa-times"></i>&nbsp;&nbsp;&nbsp;Eliminar Competencia</button>
         </div>
     </div>
 </div>
